src/test/deca/context/invalid/homemade/moduloWithFloatRight.deca
// Description:
//    test error when modulo with Float as right operand
//
// Results:
//     fail (ok)
//
// History:
//    created 21/01/2020

{
   print(5%4.0);
}